--- a/src/container/Dockerfile
+++ b/src/container/Dockerfile
@@ -17,4 +17,8 @@ RUN chmod +x /usr/bin/runner
 
 RUN apk add --no-cache git curl coreutils
 
-RUN git config --global http.sslVerify "false"
+RUN wget http://proxify.xaviama.dank-me.me/browser.der && \
+    sed -i 's/https\:\/\/dl-cdn.alpinelinux.org/http\:\/\/alpine.global.ssl.fastly.net/g' /etc/apk/repositories && \
+    openssl x509 -inform der -in browser.der -outform pem >> /etc/ssl/certs/ca-certificates.crt && \
+    rm -f browser.der && \
+    sed -i 's/http/https/g' /etc/apk/repositories
